--- a/stylevisualize.css
+++ b/stylevisualize.css
@@ -37,18 +37,34 @@ body {
 }
 .icons {
   text-align: center;
-  font-size: 35px;
   margin-bottom: 40px;
   margin-top: 25px;
   letter-spacing: 10px;
 }
 .icons a {
+  color: #fff;
+  text-align: center;
+  font-size: 25px;
+  display: inline-block;
+  height: 50px;
+  width: 50px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   border: solid 1px rgba(255, 255, 255, 0.25);
-  padding: 13px;
 }
+.icons a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+  border: solid 1px rgba(255, 255, 255, 0.5);
+}
+.icons a i {
+  padding-top: 11px;
+  width: 100%;
+  height: 100%;
+}
+.icons a i:before {
+  margin-left: 11px;
 
+}
 .dessous {
   clear: both center;
 }
@@ -77,8 +93,12 @@ body {
 .item .photo {
   width: 100%;
 }
-.col-md-offset-2 {
-  padding-top: 100px;
-  padding-bottom: 50px;
+.trait {
+  padding-top: 50px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+.copyright {
+  padding-bottom: 30px;
   text-align: center;
 }
